# tests/Swagger/mollie.yaml
@@ -233,6 +233,43 @@ paths:
           description: "successful operation"
 
 
+  /mollie/webhook/{transactionId}:
+    post:
+      tags:
+        - "Webhooks"
+      summary: "Sends a payment status update webhook to Shopware"
+      parameters:
+        - in: "path"
+          name: "transactionId"
+          description: "ID of the Shopware Transaction that will be updated"
+          required: true
+      responses:
+        "200":
+          description: "successful operation"
+
+  /mollie/webhook/subscription/{subscriptionId}/renew:
+      post:
+        tags:
+          - "Webhooks"
+        summary: "Sends a subscription renewal webhook to Shopware"
+        parameters:
+          - in: "path"
+            name: "subscriptionId"
+            description: "ID of the Shopware Subscription that should be renewed"
+            required: true
+        requestBody:
+          content:
+            application/x-www-form-urlencoded:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: string
+                    description: "The matching transaction ID of Mollie that was captured. tr_xyz, ..."
+        responses:
+          "200":
+            description: "successful operation"
+
 components:
   securitySchemes:
     AdminAPI:
